--- a/GoAhead/GoAhead.Web/Web.config
+++ b/GoAhead/GoAhead.Web/Web.config
@@ -16,13 +16,13 @@
   <location path="api">
     <system.web>
       <httpHandlers>
-        <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*"/>
+        <add path="*" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" />
       </httpHandlers>
     </system.web>
 
     <!-- Required for IIS 7.0 -->
     <system.webServer>
-      <modules runAllManagedModulesForAllRequests="true"/>
+      <modules runAllManagedModulesForAllRequests="true" />
       <validation validateIntegratedModeConfiguration="false" />
       <handlers>
         <add path="*" name="ServiceStack.Factory" type="ServiceStack.HttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" />
@@ -57,5 +57,6 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
 </configuration>
