--- a/GoAhead/GoAhead.Web/packages.config
+++ b/GoAhead/GoAhead.Web/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net45" />
@@ -10,7 +12,7 @@
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
   <package id="ServiceStack" version="4.0.40" targetFramework="net45" />
   <package id="ServiceStack.Client" version="4.0.40" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.40" targetFramework="net45" />
