--- a/GoAhead/GoAhead.Web/Web.config
+++ b/GoAhead/GoAhead.Web/Web.config
@@ -11,6 +11,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DocumentsConfigPath" value="C:\Users\Martin\Desktop\GoAhead\GoAhead\GoAhead.Web\App_Data\DocumentsConfiguration.xml"/>
   </appSettings>
 
   <location path="api">
