--- a/GoAhead/GoAhead.Service/GoAhead.Service.csproj
+++ b/GoAhead/GoAhead.Service/GoAhead.Service.csproj
@@ -48,7 +48,9 @@
       <HintPath>..\packages\ServiceStack.Text.4.0.40\lib\net40\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
