updated web api

--- a/GoAhead/GoAhead.Service/GoAhead.Service.csproj
+++ b/GoAhead/GoAhead.Service/GoAhead.Service.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="DocumentsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requests\GetCollectionsRequest.cs" />
     <Compile Include="Requests\GetDocumentRequest.cs" />
     <Compile Include="Requests\GetReferencesRequest.cs" />
     <Compile Include="ServiceHost.cs" />
