--- a/GoAhead/GoAhead.Contracts/GoAhead.Contracts.csproj
+++ b/GoAhead/GoAhead.Contracts/GoAhead.Contracts.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Requests\GetCollections.cs" />
     <Compile Include="Responses\Document.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Responses\Reference.cs" />
